--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="logo.png">
     <title>Naarad - Government Scheme Eligibility</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -32,7 +33,7 @@
 </div>
 
     <div class="container">
-      <h1>🚀 Government Scheme Eligibility</h1>
+      <h1> Government Scheme Eligibility</h1>
       <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'%3E%3Cpath fill='%236C63FF' d='M43.3,-74.4C55.7,-67.1,65.6,-55.7,72.3,-43.1C78.9,-30.5,82.3,-16.8,83.4,-2.9C84.5,11,83.3,25,78.6,38.6C73.8,52.1,65.4,65.2,52.8,74C40.2,82.9,23.5,87.5,7.7,81.5C-8.2,75.5,-16.4,59,-24.7,46.4C-33,33.8,-41.3,25.1,-52.5,13.6C-63.7,2.1,-77.8,-12.1,-78.1,-24.9C-78.4,-37.7,-64.8,-49.1,-50.7,-55.7C-36.6,-62.3,-22,-64.2,-7.5,-61.8C7,-59.5,14.1,-53,21.1,-62.7C28.2,-72.3,35.2,-98.2,43.3,-74.4Z' transform='translate(100 100)'/%3E%3C/svg%3E" class="background-svg">
 
       <form action="result.html" method="GET">
